Tools/GL_Header/shaderc/shaderc.pp


procedure shaderc_compile_options_set_include_callbacks(options:Tshaderc_compile_options_t; resolver:Tshaderc_include_resolve_fn; result_releaser:Tshaderc_include_result_release_fn; user_data:pointer);cdecl;external;
{ Sets the compiler mode to suppress warnings, overriding warnings-as-errors }
{ mode. When both suppress-warnings and warnings-as-errors modes are }
{ turned on, warning messages will be inhibited, and will not be emitted }
{ as error messages. }
procedure shaderc_compile_options_set_suppress_warnings(options:Tshaderc_compile_options_t);cdecl;external;
{ Sets the target shader environment, affecting which warnings or errors will }
{ be issued.  The version will be for distinguishing between different versions }
{ of the target environment.  The version value should be either 0 or }
{ a value listed in shaderc_env_version.  The 0 value maps to Vulkan 1.0 if }
{ |target| is Vulkan, and it maps to OpenGL 4.5 if |target| is OpenGL. }
procedure shaderc_compile_options_set_target_env(options:Tshaderc_compile_options_t; target:Tshaderc_target_env; version:Tuint32_t);cdecl;external;
{ Sets the target SPIR-V version. The generated module will use this version }
{ of SPIR-V.  Each target environment determines what versions of SPIR-V }
{ it can consume.  Defaults to the highest version of SPIR-V 1.0 which is }
{ required to be supported by the target environment.  E.g. Default to SPIR-V }
{ 1.0 for Vulkan 1.0 and SPIR-V 1.3 for Vulkan 1.1. }
procedure shaderc_compile_options_set_target_spirv(options:Tshaderc_compile_options_t; version:Tshaderc_spirv_version);cdecl;external;
{ Sets the compiler mode to treat all warnings as errors. Note the }
{ suppress-warnings mode overrides this option, i.e. if both }
{ warning-as-errors and suppress-warnings modes are set, warnings will not }
{ be emitted as error messages. }
procedure shaderc_compile_options_set_warnings_as_errors(options:Tshaderc_compile_options_t);cdecl;external;
{ Sets a resource limit. }
procedure shaderc_compile_options_set_limit(options:Tshaderc_compile_options_t; limit:Tshaderc_limit; value:longint);cdecl;external;
{ Sets whether the compiler should automatically assign bindings to uniforms }
{ that aren't already explicitly bound in the shader source. }
procedure shaderc_compile_options_set_auto_bind_uniforms(options:Tshaderc_compile_options_t; auto_bind:Tbool);cdecl;external;
{ Sets whether the compiler should automatically remove sampler variables }
{ and convert image variables to combined image-sampler variables. }
procedure shaderc_compile_options_set_auto_combined_image_sampler(options:Tshaderc_compile_options_t; upgrade:Tbool);cdecl;external;
{ Sets whether the compiler should use HLSL IO mapping rules for bindings. }
{ Defaults to false. }
procedure shaderc_compile_options_set_hlsl_io_mapping(options:Tshaderc_compile_options_t; hlsl_iomap:Tbool);cdecl;external;
{ Sets whether the compiler should determine block member offsets using HLSL }
{ packing rules instead of standard GLSL rules.  Defaults to false.  Only }
{ affects GLSL compilation.  HLSL rules are always used when compiling HLSL. }
procedure shaderc_compile_options_set_hlsl_offsets(options:Tshaderc_compile_options_t; hlsl_offsets:Tbool);cdecl;external;
{ Sets the base binding number used for for a uniform resource type when }
{ automatically assigning bindings.  For GLSL compilation, sets the lowest }
{ automatically assigned number.  For HLSL compilation, the regsiter number }
{ assigned to the resource is added to this specified base. }
procedure shaderc_compile_options_set_binding_base(options:Tshaderc_compile_options_t; kind:Tshaderc_uniform_kind; base:Tuint32_t);cdecl;external;
{ Like shaderc_compile_options_set_binding_base, but only takes effect when }
{ compiling a given shader stage.  The stage is assumed to be one of vertex, }
{ fragment, tessellation evaluation, tesselation control, geometry, or compute. }
procedure shaderc_compile_options_set_binding_base_for_stage(options:Tshaderc_compile_options_t; shader_kind:Tshaderc_shader_kind; kind:Tshaderc_uniform_kind; base:Tuint32_t);cdecl;external;
{ Sets whether the compiler should preserve all bindings, even when those }
{ bindings are not used. }
procedure shaderc_compile_options_set_preserve_bindings(options:Tshaderc_compile_options_t; preserve_bindings:Tbool);cdecl;external;
{ Sets whether the compiler should automatically assign locations to }
{ uniform variables that don't have explicit locations in the shader source. }
procedure shaderc_compile_options_set_auto_map_locations(options:Tshaderc_compile_options_t; auto_map:Tbool);cdecl;external;
{ Sets a descriptor set and binding for an HLSL register in the given stage. }
{ This method keeps a copy of the string data. }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage(options:Tshaderc_compile_options_t; shader_kind:Tshaderc_shader_kind; reg:Pchar; set:Pchar; binding:Pchar);cdecl;external;
{ Like shaderc_compile_options_set_hlsl_register_set_and_binding_for_stage, }
{ but affects all shader stages. }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure shaderc_compile_options_set_hlsl_register_set_and_binding(options:Tshaderc_compile_options_t; reg:Pchar; set:Pchar; binding:Pchar);cdecl;external;
{ Sets whether the compiler should enable extension }
{ SPV_GOOGLE_hlsl_functionality1. }
procedure shaderc_compile_options_set_hlsl_functionality1(options:Tshaderc_compile_options_t; enable:Tbool);cdecl;external;
{ Sets whether 16-bit types are supported in HLSL or not. }
procedure shaderc_compile_options_set_hlsl_16bit_types(options:Tshaderc_compile_options_t; enable:Tbool);cdecl;external;
{ Enables or disables relaxed Vulkan rules. }
{ }
{ This allows most OpenGL shaders to compile under Vulkan semantics. }
procedure shaderc_compile_options_set_vulkan_rules_relaxed(options:Tshaderc_compile_options_t; enable:Tbool);cdecl;external;
{ Sets whether the compiler should invert position.Y output in vertex shader. }
procedure shaderc_compile_options_set_invert_y(options:Tshaderc_compile_options_t; enable:Tbool);cdecl;external;
{ Sets whether the compiler generates code for max and min builtins which, }
{ if given a NaN operand, will return the other operand. Similarly, the clamp }
{ builtin will favour the non-NaN operands, as if clamp were implemented }
{ as a composition of max and min. }
procedure shaderc_compile_options_set_nan_clamp(options:Tshaderc_compile_options_t; enable:Tbool);cdecl;external;
{ An opaque handle to the results of a call to any shaderc_compile_into_*() }
{ function. }
type
  Pshaderc_compilation_result_t = ^Tshaderc_compilation_result_t;
  Tshaderc_compilation_result_t = Pshaderc_compilation_result;
{ Takes a GLSL source string and the associated shader kind, input file }
{ name, compiles it according to the given additional_options. If the shader }
{ kind is not set to a specified kind, but shaderc_glslc_infer_from_source, }
{ the compiler will try to deduce the shader kind from the source }
{ string and a failure in deducing will generate an error. Currently only }
{ #pragma annotation is supported. If the shader kind is set to one of the }
{ default shader kinds, the compiler will fall back to the default shader }
{ kind in case it failed to deduce the shader kind from source string. }
{ The input_file_name is a null-termintated string. It is used as a tag to }
{ identify the source string in cases like emitting error messages. It }
{ doesn't have to be a 'file name'. }
{ The source string will be compiled into SPIR-V binary and a }
{ shaderc_compilation_result will be returned to hold the results. }
{ The entry_point_name null-terminated string defines the name of the entry }
{ point to associate with this GLSL source. If the additional_options }
{ parameter is not null, then the compilation is modified by any options }
{ present.  May be safely called from multiple threads without explicit }
{ synchronization. If there was failure in allocating the compiler object, }
{ null will be returned. }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
